# ansible

./: .ansible-lint  .gitignore  README.md  node_exporter.yml  pyproject.toml  sql_exporter.yml
.github/workflows/: main.yml
inventory/prod/: hosts.ini.example
inventory/test/: hosts.ini.example
molecule/default/: converge.yml  molecule.yml
molecule/default/tests/: test_node_exporter.py
molecule/node_exporter/: molecule.yml  prepare.yml
molecule/node_exporter/dockerfiles/: centos-10  ubuntu-2404
molecule/node_exporter/tests/: test_node_exporter.py
molecule/postgres_exporter/: converge.yml  molecule.yml
molecule/postgres_exporter/tests/: test_postgres_exporter.py
molecule/sql_exporter/: converge.yml  molecule.yml  prepare.yml
molecule/sql_exporter/dockerfiles/: centos-9
molecule/sql_exporter/tests/: test_sql_exporter.py
playbooks/: postgres_exporter.yml
roles/node_exporter/defaults/: main.yml
roles/node_exporter/handlers/: main.yml  node_exporter.yml
roles/node_exporter/tasks/: main.yml  node_exporter.yml  system.yml
roles/node_exporter/templates/: node_exporter.service.j2
roles/postgres_exporter/defaults/: main.yml
roles/postgres_exporter/handlers/: main.yml  postgres_exporter.yml
roles/postgres_exporter/tasks/: db.yml  main.yml  postgres_exporter.yml  system.yml
roles/postgres_exporter/templates/: postgres_exporter.env.j2  postgres_exporter.service.j2  postgres_exporter.yml.j2
roles/sql_exporter/defaults/: main.yml
roles/sql_exporter/files/: pg_metrics.collector.yml
roles/sql_exporter/handlers/: main.yml  sql_exporter.yml
(+8 files in other folders)
